<resources>
    <string name="app_name">Love together</string>
    <string name="title_actionbar">Đếm ngày yêu</string>
    <string name="name_left">Huệ</string>
    <string name="name_right">Nam</string>
    <string name="change_day">Thay đổi ngày</string>
    <string name="change_background">Thay đổi hình nền</string>
    <string name="take_screen">Chụp màn hình</string>
    <string name="change_avatar">Đổi hình đại diện</string>
    <string name="change_name">Đổi tên</string>
    <string name="btn_ok">Có</string>
    <string name="btn_no">Hủy</string>
    <string name="toast_edt_empty">Tên bị trống</string>
    <string name="set_up">Cài đặt</string>
    <string name="block_screen">Khóa màn hình</string>
    <string name="set_pass">Cài đặt mật khẩu</string>
    <string name="choose_other">Chọn từ máy</string>
    <string name="add_memory">Thêm kỷ niệm tình yêu</string>
    <string name="name_memory">Tên kỷ niệm</string>
    <string name="date_memory">curent day</string>
    <string name="choose_image">Chọn ảnh</string>
    <string name="save_device">Lưu vào máy</string>
    <string name="set_background">Cài làm hình nền</string>
    <string name="share_fb">Chia sẻ lên facebook</string>
    <string name="watch_image">Xem ảnh chụp</string>
    <string name="title_empty">Đặt tên kỉ niệm</string>
    <string name="must_choose">Bạn chưa chọn ảnh</string>
    <string name="notification">Thông báo</string>
    <string name="set_pass_next">Tiếp</string>
    <string name="set_pass_cancel">Xóa</string>
    <string name="title_changeBackGround">Đổi hình nền</string>
    <string name="invalidate_pass">Xác nhận mật khẩu</string>
    <string name="press_pass">Nhập mật khẩu</string>
    <string name="sos">Khẩn cấp</string>
    <string name="set_old_pass">Nhập lại mật khẩu cũ</string>
    <string name="delete_memory">Xóa kỷ niệm</string>
    <string name="message_delete">Bạn có muốn xóa kỷ niệm này ?</string>
    <string name="text_unlock">Vuốt màn hình để mở khóa</string>
    <string name="set_wallpaper">Cài màn hình thành công</string>
    <string name="day">Ngày</string>
    <string name="saved_image">Lưu thành công</string>
</resources>
