<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_main">

    <TextView
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_up"
        android:id="@id/tvTitle"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_main">

        <TextView
            android:id="@id/tvNotification"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/notification"
            android:textColor="@color/white" />

        <Switch
            android:id="@id/btnNotification"
            android:layout_width="@dimen/btn_width_normal"
            android:layout_height="@dimen/btn_height_normal"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <TextView
            android:id="@id/tvBlockScreen"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/block_screen"
            android:textColor="@color/white" />

        <Switch
            android:id="@id/btnBlockScreen"
            android:layout_width="@dimen/btn_width_normal"
            android:layout_height="@dimen/btn_height_normal"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        android:background="@color/white" />

    <TextView
        android:id="@id/tvSetPass"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="@dimen/btn_height_normal"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:text="@string/set_pass"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        android:background="@color/white" />

    <TextView
        android:id="@id/tvChangeBackGround"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height_normal"
        android:layout_centerInParent="true"
        android:gravity="center_vertical"
        android:text="@string/change_background"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

</LinearLayout>