<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_main"
    android:background="@drawable/ic_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:text="@string/set_pass"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/padding_main"
        android:id="@id/title_pass_screen"
        android:textSize="@dimen/text_nomarl"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:id="@id/sync_pass"
        android:layout_below="@id/title_pass_screen"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padding_main"
        android:layout_height="20dp">
        <com.ttth.lovetogether.views.CircleImageView
            android:layout_width="@dimen/padding_main"
            app:civ_border_width="1dp"
            android:id="@id/sync_pass1"
            android:background="@drawable/shape_sync_pass"
            app:civ_border_overlay="true"
            app:civ_fill_color="@color/white"
            app:civ_border_color="@color/white"
            android:layout_marginRight="@dimen/padding_main"
            android:layout_height="@dimen/padding_main" />

        <com.ttth.lovetogether.views.CircleImageView
            android:id="@id/sync_pass2"
            android:layout_width="@dimen/padding_main"
            android:background="@drawable/shape_sync_pass"
            android:layout_height="@dimen/padding_main"
            android:layout_marginRight="@dimen/padding_main"
            app:civ_border_color="@color/white"
            app:civ_border_overlay="true"
            app:civ_border_width="1dp" />

        <com.ttth.lovetogether.views.CircleImageView
            android:layout_width="@dimen/padding_main"
            android:id="@id/sync_pass3"
            app:civ_border_width="1dp"
            android:background="@drawable/shape_sync_pass"
            app:civ_border_overlay="true"
            app:civ_border_color="@color/white"
            android:layout_marginRight="@dimen/padding_main"
            android:layout_height="@dimen/padding_main" />
        <com.ttth.lovetogether.views.CircleImageView
            android:layout_width="@dimen/padding_main"
            android:id="@id/sync_pass4"
            android:background="@drawable/shape_sync_pass"
            app:civ_border_width="1dp"
            app:civ_border_overlay="true"
            app:civ_border_color="@color/white"
            android:layout_marginRight="@dimen/padding_main"
            android:layout_height="@dimen/padding_main" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@id/num_pass"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent"
        android:layout_below="@id/sync_pass"
        android:layout_marginTop="@dimen/padding_main"
        android:layout_above="@+id/option_set_pass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:background="@drawable/shape_sync_pass"
                android:textColor="@color/white"
                android:id="@id/btn8"
                android:text="8"
                android:textSize="40dp"
                android:gravity="center"
                android:layout_marginRight="@dimen/padding_main"
                android:layout_marginLeft="@dimen/padding_main"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/btn_height_normal"
                android:layout_height="@dimen/btn_height_normal" />
            <TextView
                android:id="@id/btn7"
                android:background="@drawable/shape_sync_pass"
                android:textColor="@color/white"
                android:text="7"
                android:textSize="40dp"
                android:gravity="center"
                android:layout_toStartOf="@id/btn8"
                android:layout_width="@dimen/btn_height_normal"
                android:layout_height="@dimen/btn_height_normal"
                android:layout_toLeftOf="@id/btn8" />
            <TextView
                android:background="@drawable/shape_sync_pass"
                android:textColor="@color/white"
                android:id="@id/btn9"
                android:text="9"
                android:textSize="40dp"
                android:gravity="center"
                android:layout_toEndOf="@id/btn8"
                android:layout_width="@dimen/btn_height_normal"
                android:layout_height="@dimen/btn_height_normal"
                android:layout_toRightOf="@id/btn8" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/padding_main"
            android:layout_marginBottom="@dimen/padding_main"
            android:layout_height="wrap_content">
            <TextView
                android:background="@drawable/shape_sync_pass"
                android:textColor="@color/white"
                android:id="@id/btn5"
                android:text="5"
                android:textSize="40dp"
                android:gravity="center"
                android:layout_marginRight="@dimen/padding_main"
                android:layout_marginLeft="@dimen/padding_main"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/btn_height_normal"
                android:layout_height="@dimen/btn_height_normal" />
            <TextView
                android:background="@drawable/shape_sync_pass"
                android:textColor="@color/white"
                android:id="@id/btn4"
                android:text="4"
                android:textSize="40dp"
                android:gravity="center"
                android:layout_toStartOf="@id/btn5"
                android:layout_width="@dimen/btn_height_normal"
                android:layout_height="@dimen/btn_height_normal"
                android:layout_toLeftOf="@id/btn5" />
            <TextView
                android:background="@drawable/shape_sync_pass"
                android:textColor="@color/white"
                android:id="@id/btn6"
                android:text="6"
                android:textSize="40dp"
                android:gravity="center"
                android:layout_toEndOf="@id/btn5"
                android:layout_width="@dimen/btn_height_normal"
                android:layout_height="@dimen/btn_height_normal"
                android:layout_toRightOf="@id/btn5" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:background="@drawable/shape_sync_pass"
                android:textColor="@color/white"
                android:id="@id/btn2"
                android:text="2"
                android:textSize="40dp"
                android:gravity="center"
                android:layout_marginRight="@dimen/padding_main"
                android:layout_marginLeft="@dimen/padding_main"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/btn_height_normal"
                android:layout_height="@dimen/btn_height_normal" />
            <TextView
                android:background="@drawable/shape_sync_pass"
                android:textColor="@color/white"
                android:id="@id/btn1"
                android:text="1"
                android:textSize="40dp"
                android:gravity="center"
                android:layout_toStartOf="@id/btn2"
                android:layout_width="@dimen/btn_height_normal"
                android:layout_height="@dimen/btn_height_normal"
                android:layout_toLeftOf="@id/btn2" />
            <TextView
                android:background="@drawable/shape_sync_pass"
                android:textColor="@color/white"
                android:id="@id/btn3"
                android:text="3"
                android:textSize="40dp"
                android:gravity="center"
                android:layout_toEndOf="@id/btn2"
                android:layout_width="@dimen/btn_height_normal"
                android:layout_height="@dimen/btn_height_normal"
                android:layout_toRightOf="@id/btn2" />

        </RelativeLayout>
        <TextView
            android:background="@drawable/shape_sync_pass"
            android:textColor="@color/white"
            android:id="@id/btn0"
            android:text="0"
            android:textSize="40dp"
            android:gravity="center"
            android:layout_marginTop="@dimen/padding_main"
            android:layout_toEndOf="@id/btn2"
            android:layout_width="@dimen/btn_height_normal"
            android:layout_height="@dimen/btn_height_normal"
            android:layout_toRightOf="@id/btn2" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@id/option_set_pass"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@id/clear"
            android:textStyle="bold"
            android:text="@string/set_pass_cancel"
            android:textSize="@dimen/text_nomarl"
            android:textColor="@color/white"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/set_pass_next"
            android:id="@id/next"
            android:gravity="right"
            android:textSize="@dimen/text_nomarl"
            android:textColor="@color/white"
            android:layout_height="match_parent" />

    </LinearLayout>



</RelativeLayout>